# VizExplorer_FINAL

./: README.md  pyproject.toml
VizExplorer_FINAL/: .env  app.py  config.py  main.py  pyproject.toml  requirements.txt  test_results.txt
VizExplorer_FINAL/BIRD_dataset/: all_database_ddls.sql  bird_model_output_formatted.json  ddl_statements.txt  get_bird_database_schema.py  model_bird_evaluation.py  model_bird_submission.py  prepare_bird_output_data.py  prepare_evaluation_data.py  sqlite_postgres_migration.py
VizExplorer_FINAL/database/: training_database.py
VizExplorer_FINAL/database/actual_data/: accounts_data.csv  accounts_data.py  clients_data.py  clients_table.csv  etf_data.py  etfs_historical_data.csv  filtered_market_news.csv  historical_stock_clean_data.csv  historical_stock_data.csv  holdings_data.csv  holdings_data.py  market_news.csv  market_news_clean_data.csv  news_data.py  portfolios_data.csv  portfolios_data.py  stocks_data.py  transactions_data.py
VizExplorer_FINAL/database/training_data/: T2SQL_model_training.py  database_schema.json  documentation.txt  training_queries.json
VizExplorer_FINAL/model_training_and_perf/: T2SQL_model_performance.py  T2SQL_model_validation.py  T2SQL_training_database_schema.py  bird_model_output.json  converted_ground_truth.json  model_bird_evaluation.py  performance_measure.py  query_execution_comparison_log.json  sql_parse_reference.py
VizExplorer_FINAL/utils/: helpers.py
model_output/: bird_model_output.json  bird_model_output_formatted.json  model_bird_submission.py  prepare_bird_output_data.py  (+2 more)
(+51 files in other folders)
